--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
+    "moment": "^2.29.4",
     "pd": "^0.8.1",
     "pg": "^8.7.3"
   }
