melhorando alguns pontos do teste automatizado.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@faker-js/faker": "^7.3.0",
     "moment": "^2.29.4",
     "pd": "^0.8.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "underscore": "^1.13.4"
   }
 }
